2004-01-31  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* autogen.sh: Use automake-1.8 if available. Patch from
	alexander.winston@comcast.net (Alexander Winston). Bug #132966.

2004-01-25  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* autogen.sh: Deprecate the use of GNOME2_DIR and allow the use
	of GNOME2_PATH (bug #130516).

2004-01-02  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* autogen.sh: Run intltoolize after automake, since intltoolize
	wants mkinstalldirs now. Should fix bugs #130309 and #130366.

2003-12-13  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* autogen.sh: Change the use of head to be 'head -n -1', since
	the GNU version of head appears to have changed behaviour
	between version 5.0 and 5.0.9 somewhere. This should be portable
	across all versions now. Fixed bug #128867.

2003-12-08  Rodney Dawes  <dobey@free.fr>

	* autogen.sh: Update automake checks to check incremental
	versions in the correct order, Fixes #128691

2003-11-19  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* autogen.sh: Replace use of -or in a find command with -o.
	Makes things work for people with less functional versions of
	find. Fixes bug #127354 reported by Rolf Sponsel.

2003-11-03    <clahey@ximian.com>

	* gnome-common.m4: Removed ENABLE_WERROR and changed name to
	GNOME_MAINTAINER_MODE_DEFINES.

2003-11-01  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* autogen.sh: Make version checking work, as pointed out by
	Michael H Schimek in bug #125818.

2003-10-31    <clahey@ximian.com>

	* gnome-common.m4: Changed name of new macro to
	AM_MAINTAINER_MODE_DEFINES and added definition for ENABLE_WERROR.

2003-10-31    <clahey@ximian.com>

	* gnome-common.m4: New macro to disable deprecated functions and
	widgets when maintainer mode is on.

2003-08-10  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* autogen.sh: Show the version found for the various build tools
	like automake, autoconf, libtool, etc. Patch from Steve Chaplin
	(bug #119533).
